--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,6 +1,6 @@
 worker_processes auto;
-error_log /var/log/nginx/error.log warn;
-pid /var/run/nginx.pid;
+error_log /app/log/nginx_error.log warn;
+pid /app/run/nginx.pid;
 
 events {
     worker_connections 1024;
