--- a/nginx/default.conf.template
+++ b/nginx/default.conf.template
@@ -1,5 +1,5 @@
 server {
-    listen 8080;
+    listen {{GEMINI_LISTEN_PORT}};
     server_name _;
     root /app/static;
     index index.html;
@@ -10,14 +10,14 @@ server {
 
     # 健康检查
     location /health {
-        proxy_pass http://127.0.0.1:8000/health;
+        proxy_pass http://127.0.0.1:{{GEMINI_LISTEN_PORT}}/health;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
     }
 
     # API 路由
     location /api {
-        proxy_pass http://127.0.0.1:8000;
+        proxy_pass http://127.0.0.1:{{GEMINI_LISTEN_PORT}};
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
@@ -33,7 +33,7 @@ server {
 
     # SSE 日志流
     location /tasks {
-        proxy_pass http://127.0.0.1:8000;
+        proxy_pass http://127.0.0.1:{{GEMINI_LISTEN_PORT}};
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
