--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -10,7 +10,7 @@ server {
 
     # 健康检查
     location /health {
-        proxy_pass http://127.0.0.1:8000/api/health;
+        proxy_pass http://127.0.0.1:8000/health;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
     }
@@ -33,7 +33,7 @@ server {
 
     # SSE 日志流
     location /tasks {
-        proxy_pass http://127.0.0.1:8000/api/tasks;
+        proxy_pass http://127.0.0.1:8000/tasks;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
